[tool.poetry]
name = "estimate_bcm"
version = "0.1.0"
description = ""
authors = ["Nishit Parekh"]
license = "MIT License"

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
numpy = "^1.22.3"
scipy = "^1.8.0"
sympy = "^1.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
